src/iodbc_sql.h

/*
 *  SQLGetTypeInfo request for all data types
 */
#define SQL_ALL_TYPES               0
#define SQL_FALSE               0
#define SQL_TRUE                1
/*
 *  SQLDataSources/SQLFetchScroll - FetchOrientation
 */
#define SQL_FETCH_NEXT              1
#define SQL_FETCH_FIRST             2
/*
 *  SQLFetchScroll - FetchOrientation
 */
#define SQL_FETCH_LAST              3
#define SQL_FETCH_PRIOR             4
#define SQL_FETCH_ABSOLUTE          5
#define SQL_FETCH_RELATIVE          6
/*
 *  SQLTransact/SQLEndTran
 */
#define SQL_COMMIT              0
#define SQL_ROLLBACK                1
SQLRETURN SQL_API SQLBindCol (
    SQLHSTMT          StatementHandle,
    SQLUSMALLINT      ColumnNumber,
    SQLSMALLINT       TargetType,
    SQLPOINTER        TargetValue,
    SQLLEN        BufferLength,
    SQLLEN      * StrLen_or_Ind);
SQLRETURN SQL_API SQLCancel (
    SQLHSTMT          StatementHandle);
SQLRETURN SQL_API SQLCloseCursor (
    SQLHSTMT          StatementHandle);
/*
 *  Using SQLLEN * instead of SQLPOINTER for NumericAttribute,
 *  makes the prototype the same as SQLColAttributes (deprecated)
 *  and clearer for 64bit ports
 */
SQLRETURN SQL_API SQLColAttribute (
    SQLHSTMT          StatementHandle,
    SQLUSMALLINT      ColumnNumber,
    SQLUSMALLINT      FieldIdentifier,
    SQLPOINTER        CharacterAttribute,
    SQLSMALLINT       BufferLength,
    SQLSMALLINT     * StringLength,
    SQLLEN      * NumericAttribute);
SQLRETURN SQL_API SQLDescribeCol (
    SQLHSTMT          StatementHandle,
    SQLUSMALLINT      ColumnNumber,
    SQLCHAR     * ColumnName,
    SQLSMALLINT       BufferLength,
    SQLSMALLINT     * NameLength,
    SQLSMALLINT     * DataType,
    SQLULEN     * ColumnSize,
    SQLSMALLINT     * DecimalDigits,
    SQLSMALLINT     * Nullable);
SQLRETURN SQL_API SQLEndTran (
    SQLSMALLINT       HandleType,
    SQLHANDLE         Handle,
    SQLSMALLINT       CompletionType);
SQLRETURN SQL_API SQLExecDirect (
    SQLHSTMT          StatementHandle,
    SQLCHAR     * StatementText,
    SQLINTEGER        TextLength);
SQLRETURN SQL_API SQLExecute (
    SQLHSTMT          StatementHandle);
SQLRETURN SQL_API SQLFetchScroll (
    SQLHSTMT          StatementHandle,
    SQLSMALLINT       FetchOrientation,
    SQLLEN        FetchOffset);
SQLRETURN SQL_API SQLGetCursorName (
    SQLHSTMT          StatementHandle,
    SQLCHAR     * CursorName,
    SQLSMALLINT       BufferLength,
    SQLSMALLINT     * NameLength);
SQLRETURN SQL_API SQLGetData (
    SQLHSTMT          StatementHandle,
    SQLUSMALLINT      ColumnNumber,
    SQLSMALLINT       TargetType,
    SQLPOINTER        TargetValue,
    SQLLEN        BufferLength,
    SQLLEN      * StrLen_or_Ind);
SQLRETURN SQL_API SQLGetFunctions (
    SQLHDBC     ConnectionHandle,
    SQLUSMALLINT    FunctionId,
    SQLUSMALLINT *  Supported);
SQLRETURN SQL_API SQLGetInfo (
    SQLHDBC       ConnectionHandle,
    SQLUSMALLINT      InfoType,
    SQLPOINTER        InfoValue,
    SQLSMALLINT       BufferLength,
    SQLSMALLINT     * StringLength);
SQLRETURN SQL_API SQLGetTypeInfo (
    SQLHSTMT          StatementHandle,
    SQLSMALLINT       DataType);
SQLRETURN SQL_API SQLNumResultCols (
    SQLHSTMT          StatementHandle,
    SQLSMALLINT     * ColumnCount);
SQLRETURN SQL_API SQLParamData (
    SQLHSTMT          StatementHandle,
    SQLPOINTER      * Value);
SQLRETURN SQL_API SQLPrepare (
    SQLHSTMT          StatementHandle,
    SQLCHAR     * StatementText,
    SQLINTEGER        TextLength);
SQLRETURN SQL_API SQLPutData (
    SQLHSTMT          StatementHandle,
    SQLPOINTER        Data,
    SQLLEN        StrLen_or_Ind);
SQLRETURN SQL_API SQLRowCount (
    SQLHSTMT          StatementHandle,
    SQLLEN      * RowCount);
SQLRETURN SQL_API SQLSetCursorName (
    SQLHSTMT          StatementHandle,
    SQLCHAR     * CursorName,
    SQLSMALLINT       NameLength);
/*
 *  Depreciated ODBC 1.0 function - Use SQLBindParameter
 */
SQLRETURN SQL_API SQLSetParam (
    SQLHSTMT          StatementHandle,
    SQLUSMALLINT      ParameterNumber,
    SQLSMALLINT       ValueType,
    SQLSMALLINT       ParameterType,
    SQLULEN       LengthPrecision,
    SQLSMALLINT       ParameterScale,
    SQLPOINTER        ParameterValue,
    SQLLEN      * StrLen_or_Ind);