src/iodbc_sqlext.h

/*
 *  SQLSetPos - Operation
 */
#define SQL_POSITION                0
#define SQL_REFRESH             1
#define SQL_UPDATE              2
#define SQL_DELETE              3
/*
 *  SQLBulkOperations - Operation
 */
#define SQL_ADD                 4
#define SQL_UPDATE_BY_BOOKMARK          5
#define SQL_DELETE_BY_BOOKMARK          6
#define SQL_FETCH_BY_BOOKMARK           7
/*
 *  SQLSetPos - LockType
 */
#define SQL_LOCK_NO_CHANGE          0
#define SQL_LOCK_EXCLUSIVE          1
#define SQL_LOCK_UNLOCK             2
/*
 * ----------------------------------------------------------------------
 *  Level 2 Functions
 * ----------------------------------------------------------------------
 */

/*
 *  SQLExtendedFetch - fFetchType
 */
#define SQL_FETCH_BOOKMARK          8
#define SQL_PARAM_INPUT             1
#define SQL_PARAM_INPUT_OUTPUT          2
#define SQL_PARAM_OUTPUT            4
SQLRETURN SQL_API SQLBulkOperations (
    SQLHSTMT          StatementHandle,
    SQLSMALLINT       Operation);
SQLRETURN SQL_API SQLDescribeParam (
    SQLHSTMT          hstmt,
    SQLUSMALLINT      ipar,
    SQLSMALLINT     * pfSqlType,
    SQLULEN     * pcbParamDef,
    SQLSMALLINT     * pibScale,
    SQLSMALLINT     * pfNullable);
SQLRETURN SQL_API SQLExtendedFetch (
    SQLHSTMT          hstmt,
    SQLUSMALLINT      fFetchType,
    SQLLEN        irow,
    SQLULEN     * pcrow,
    SQLUSMALLINT    * rgfRowStatus);
SQLRETURN SQL_API SQLMoreResults (
    SQLHSTMT          hstmt);
SQLRETURN SQL_API SQLNativeSql (
    SQLHDBC       hdbc,
    SQLCHAR     * szSqlStrIn,
    SQLINTEGER        cbSqlStrIn,
    SQLCHAR     * szSqlStr,
    SQLINTEGER        cbSqlStrMax,
    SQLINTEGER      * pcbSqlStr);
SQLRETURN SQL_API SQLNumParams (
    SQLHSTMT        hstmt,
    SQLSMALLINT     * pcpar);
SQLRETURN SQL_API SQLSetPos (
    SQLHSTMT          hstmt,
    SQLSETPOSIROW     irow,
    SQLUSMALLINT      fOption,
    SQLUSMALLINT      fLock);
SQLRETURN SQL_API SQLBindParameter (
    SQLHSTMT          hstmt,
    SQLUSMALLINT      ipar,
    SQLSMALLINT       fParamType,
    SQLSMALLINT       fCType,
    SQLSMALLINT       fSqlType,
    SQLULEN       cbColDef,
    SQLSMALLINT       ibScale,
    SQLPOINTER        rgbValue,
    SQLLEN        cbValueMax,
    SQLLEN      * pcbValue);