src/ODBC_API.jl

 
 #supported will be SQL_TRUE or SQL_FALSE
 #Status:
 #Major TODO
function SQLGetFunctions(dbc::Ptr{Void},functionid::Uint16,supported::Array{Uint16,1})
	return ccall( (:SQLGetFunctions, odbc_dm), stdcall,
		Int16, (Ptr{Void},Uint16,Ptr{Uint16}),
		dbc,functionid,supported)
end
#SQLGetInfo
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms711681(v=vs.85).aspx
 #Description:
 #Status:
 #Major TODO
function SQLGetInfo{T,N}(dbc::Ptr{Void},attribute::Int,value::Array{T,N},bytes_returned::Array{Int,1})
	return ccall( (:SQLGetInfo, odbc_dm), stdcall,
		Int16, (Ptr{Void},Int,Ptr{T},Int,Ptr{Int}),
		dbc,attribute,value,sizeof(T)*N,bytes_returned)
end

###################################################		Query Functions	####################################################################################################
#SQLNativeSql
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms714575(v=vs.85).aspx
 #Description: returns the SQL string as modified by the driver
 #Status:
function SQLNativeSql(dbc::Ptr{Void},query_string::String,output_string::Array{Uint8,1},length_ind::Array{Int,1})
	return ccall( (:SQLNativeSql, odbc_dm), stdcall,
		Int16, (Ptr{Void},Ptr{Uint8},Int,Ptr{Uint8},Int,Ptr{Int}),
		dbc,query_string,length(query_string),output_string,length(output_string),length_ind)
end
#SQLGetTypeInfo
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms714632(v=vs.85).aspx
 #Description:
 #valid sqltype
	#const SQL_ALL_TYPES = 
	
 #Status:
function SQLGetTypeInfo(stmt::Ptr{Void},sqltype::Int16)
	return ccall( (:SQLGetTypeInfo, odbc_dm), stdcall,
		Int16, (Ptr{Void},Int16),
		stmt,sqltype)
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms713824(v=vs.85).aspx
function SQLPutData{T}(stmt::Ptr{Void},data::Array{T},data_length::Int)
	return ccall( (:SQLPutData, odbc_dm), stdcall,
		Int16, (Ptr{Void},Ptr{T},Int),
		stmt,data,data_length)
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms710926(v=vs.85).aspx
function SQLPrepare(stmt::Ptr{Void},query_string::String)
	return ccall( (:SQLPrepare, odbc_dm), stdcall,
		Int16, (Ptr{Void},Ptr{Uint8},Int16),
		stmt,query_string,length(query_string))
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms713584(v=vs.85).aspx
function SQLExecute(stmt::Ptr{Void})
	return ccall( (:SQLExecute, odbc_dm), stdcall,
		Int16, (Ptr{Void},),
		stmt)
end
#SQLExecDirect
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms713611(v=vs.85).aspx
 #Description: executes a preparable statement
 #Status:
function SQLExecDirect(stmt::Ptr{Void},query::String)
	return ccall( (:SQLExecDirect, odbc_dm), stdcall, 
		Int16, (Ptr{Void},Ptr{Uint8},Int),
		stmt,query,length(query))
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms714112(v=vs.85).aspx
function SQLCancel(stmt::Ptr{Void})
	return ccall( (:SQLCancel, odbc_dm), stdcall,
		Int16, (Ptr{Void},),
		stmt)
end

###################################################		Resultset Metadata Functions	####################################################################################################
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms715393(v=vs.85).aspx
function SQLNumResultCols(stmt::Ptr{Void},cols::Array{Int16,1})
	return ccall( (:SQLNumResultCols, odbc_dm), stdcall,  
		Int16, (Ptr{Void},Ptr{Int16}), 
		stmt, cols)
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms711835(v=vs.85).aspx
function SQLRowCount(stmt::Ptr{Void},rows::Array{Int,1})
	return ccall( (:SQLRowCount, odbc_dm), stdcall,  
		Int16, (Ptr{Void},Ptr{Int}), 
		stmt, rows)
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms713558(v=vs.85).aspx
function SQLColAttribute(stmt::Ptr{Void},x::Int,)
	return ccall( (:SQLColAttribute, odbc_dm), stdcall,
		Int16, (Ptr{Void},Uint16,Uint16,Ptr,Int16,Ptr{Int16},Ptr{Int}),
		stmt,x,)
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms716289(v=vs.85).aspx
function SQLDescribeCol(stmt::Ptr{Void},x::Int,column_name::Array{Uint8,1},name_length::Array{Int16,1},datatype::Array{Int16,1},column_size::Array{Int,1},decimal_digits::Array{Int16,1},nullable::Array{Int16,1})
	return ccall( (:SQLDescribeCol, odbc_dm), stdcall, 
		Int16, (Ptr{Void},Uint16,Ptr{Uint8},Int16,Ptr{Int16},Ptr{Int16},Ptr{Uint},Ptr{Int16},Ptr{Int16}),
		stmt,x,column_name,length(column_name),name_length,datatype,column_size,decimal_digits,nullable)
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms710188(v=vs.85).aspx
function SQLDescribeParam(stmt::Ptr{Void},x::Int,sqltype::Array{Int16,1},column_size::Array{Int,1},decimal_digits::Array{Int16,1},nullable::Array{Int16,1})
	return ccall( (:SQLDescribeParam, odbc_dm), stdcall,
		Int16, (Ptr{Void},Uint16,Ptr{Int16},Ptr{Int},Ptr{Int16},Ptr{Int16}),
		stmt,x,sqltype,column_size,decimal_digits,nullable)
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms712366(v=vs.85).aspx
function SQLParamData(stmt::Ptr{Void},ptr_buffer::Array{Ptr{Void},1})
	return ccall( (:SQLParamData, odbc_dm), stdcall,
		Int16, (Ptr{Void},Ptr{Void}),
		stmt,ptr_buffer)
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms715409(v=vs.85).aspx
function SQLNumParams(stmt::Ptr{Void},param_count::Array{Int16,1})
	return ccall( (:SQLNumParams, odbc_dm), stdcall,
		Int16, (Ptr{Void},Ptr{Int16}),
		stmt,param_count)
end

###################################################		Resultset Retrieval Functions	####################################################################################################
#SQLBindParameter
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms710963(v=vs.85).aspx
 #Description:
 #valid iotype
	const SQL_PARAM_INPUT = int16(1) #SQLBindParameter
	const SQL_PARAM_OUTPUT = int16(4) #SQLBindParameter
	const SQL_PARAM_INPUT_OUTPUT = int16(2) #SQLBindParameter
	#const SQL_PARAM_INPUT_OUTPUT_STREAM = int16() #SQLBindParameter
	#const SQL_PARAM_OUTPUT_STREAM = int16() #SQLBindParameter
 #Status:
function SQLBindParameter{T}(stmt::Ptr{Void},x::Int,iotype::Int16,ctype::Int16,sqltype::Int16,column_size::Int,decimal_digits::Int,param_value::Array{T},param_size::Int)
	return ccall( (:SQLBindParameter, odbc_dm), stdcall,
		Int16, (Ptr{Void},Uint16,Int16,Int16,Int16,Uint,Int16,Ptr{T},Int,Ptr{Void}),
		stmt,x,iotype,ctype,sqltype,column_size,decimal_digits,param_value,param_size,C_NULL)
end
SQLSetParam = SQLBindParameter
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms711010(v=vs.85).aspx
function SQLBindCols{T,N}(stmt::Ptr{Void},x::Int,ctype::Int16,holder::Array{T,N},jlsize::Int,indicator::Array{Int,2},::Type{T})
	return ccall( (:SQLBindCol, odbc_dm), stdcall, 
		Int16, (Ptr{Void},Uint16,Int16,Ptr{T},Int,Ptr{Int}),
		stmt,x,ctype,holder,jlsize,indicator[:,x])
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms711707(v=vs.85).aspx
function SQLSetCursorName(stmt::Ptr{Void},cursor::String)
	return ccall( (:SQLSetCursorName, odbc_dm), stdcall,
		Int16, (Ptr{Void},Ptr{Uint8},Int16),
		stmt,cursor,length(cursor))
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms716209(v=vs.85).aspx
function SQLGetCursorName(stmt::Ptr{Void},cursor::Array{Uint8,1},cursor_length::Array{Int16,1})
	return ccall( (:SQLGetCursorName, odbc_dm), stdcall,
		Int16, (Ptr{Void},Ptr{Uint8},Int16,Ptr{Int16}),
		stmt,cursor,length(cursor),cursor_length)
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms715441(v=vs.85).aspx
function SQLGetData{T,N}(stmt::Ptr{Void},i::Int,ctype::Int16,value::Array{T,N},bytes_returned::Array{Int,1})
	return ccall( (:SQLGetData, odbc_dm), stdcall,
		Int16, (Ptr{Void},Uint16,Int16,Ptr{T},Int,Ptr{Int}),
		stmt,i,ctype,value,sizeof(T)*N,bytes_returned)
end
#SQLFetchScroll
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms714682(v=vs.85).aspx
 #Description:
 #valid fetch_orientation
	const SQL_FETCH_NEXT = int16(1)
	const SQL_FETCH_PRIOR = int16(4)
	const SQL_FETCH_FIRST = int16(2)
	const SQL_FETCH_LAST = int16(3)
	const SQL_FETCH_ABSOLUTE = int16(5)
	const SQL_FETCH_RELATIVE = int16(6)
	const SQL_FETCH_BOOKMARK = int16(8)
 #Status:
function SQLFetchScroll(stmt::Ptr{Void},fetch_orientation::Int16,fetch_offset::Int)
	return ccall( (:SQLFetchScroll, odbc_dm), stdcall, 
		Int16, (Ptr{Void},Int16,Int), 
		stmt,fetch_orientation,fetch_offset)
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms713591(v=vs.85).aspx
function SQLExtendedFetch(stmt::Ptr{Void},fetch_orientation::Uint16,fetch_offset::Int,row_count_ptr::Array{Int,1},row_status_array::Array{Int16,1})
	return ccall( (:SQLExtendedFetch, odbc_dm), stdcall,
		Int16, (Ptr{Void},Uint16,Int,Ptr{Int},Ptr{Int16}),
		stmt,fetch_orientation,fetch_offset,row_count_ptr,row_status_array)
end
#SQLSetPos
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms713507(v=vs.85).aspx
 #Description:
 #valid operation
	const SQL_POSITION = uint16(0) #SQLSetPos
	const SQL_REFRESH = uint16(1) #SQLSetPos
	const SQL_UPDATE = uint16(2) #SQLSetPos
	const SQL_DELETE = uint16(3) #SQLSetPos
 #valid lock_type
	const SQL_LOCK_NO_CHANGE = uint16(0) #SQLSetPos
	const SQL_LOCK_EXCLUSIVE = uint16(1) #SQLSetPos
	const SQL_LOCK_UNLOCK = uint16(2) #SQLSetPos
 #Status
function SQLSetPos{T}(stmt::Ptr{Void},rownumber::T,operation::Uint16,lock_type::Uint16)
	return ccall( (:SQLSetPos, odbc_dm), stdcall,
		Int16, (Ptr{Void},T,Uint16,Uint16),
		stmt,rownumber,operation,lock_type)
end #T can be Uint64 or Uint16 it seems
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms714673(v=vs.85).aspx
function SQLMoreResults(stmt::Ptr{Void})
	return ccall( (:SQLMoreResults, odbc_dm), stdcall,
		Int16, (Ptr{Void},),
		stmt)
end
#SQLEndTran
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms716544(v=vs.85).aspx
 #Description:
 #valid completion_type
	const SQL_COMMIT = int16(0) #SQLEndTran
	const SQL_ROLLBACK = int16(1) #SQLEndTran
 #Status:
function SQLEndTran(handletype::Int16,handle::Ptr{Void},completion_type::Int16)
	return ccall( (:SQLEndTran, odbc_dm), stdcall,
		Int16, (Int16,Ptr{Void},Int16),
		handletype,handle,completion_type)
end
#http://msdn.microsoft.com/en-us/library/windows/desktop/ms709301(v=vs.85).aspx
function SQLCloseCursor(stmt::Ptr{Void})
	return ccall( (:SQLCloseCursor, odbc_dm), stdcall,
		Int16, (Ptr{Void},),
		stmt)
end
#SQLBulkOperations
 #http://msdn.microsoft.com/en-us/library/windows/desktop/ms712471(v=vs.85).aspx
 #Description:
 #valid operation
	const SQL_ADD = uint16(4) #SQLBulkOperations
	const SQL_UPDATE_BY_BOOKMARK = uint16(5) #SQLBulkOperations
	const SQL_DELETE_BY_BOOKMARK = uint16(6) #SQLBulkOperations
	const SQL_FETCH_BY_BOOKMARK = uint16(7) #SQLBulkOperations
 #Status:
function SQLBulkOperations(stmt::Ptr{Void},operation::Uint16)
	return ccall( (:SQLBulkOperations, odbc_dm), stdcall,
		Int16, (Ptr{Void},Uint16),
		stmt,operation)
end
